--- a/vision.html
+++ b/vision.html
@@ -256,6 +256,10 @@
         <a href="join.html">Join</a>
         <a href="candidates.html">Candidates</a>
         <a href="contact.html">Contact</a>
+        <span class="lang-switch">
+  <a href="vision.html" class="lang active">EN</a> |
+  <a href="vision-hi.html" class="lang">हिंदी</a>
+</span>
       </nav>
     </div>
   </header>
