--- a/join.html
+++ b/join.html
@@ -203,6 +203,10 @@
         <a href="join.html" class="active">Join</a>
         <a href="candidates.html">Candidates</a>
         <a href="contact.html">Contact</a>
+        <span class="lang-switch">
+  <a href="join.html" class="lang active">EN</a> |
+  <a href="join-hi.html" class="lang">हिंदी</a>
+</span>
       </nav>
     </div>
   </header>
