--- a/candidates.html
+++ b/candidates.html
@@ -211,6 +211,10 @@
         <a href="join.html">Join</a>
         <a href="candidates.html" class="active">Candidates</a>
         <a href="contact.html">Contact</a>
+         <span class="lang-switch">
+  <a href="Candidates.html" class="lang active">EN</a> |
+  <a href="Candidates-hi.html" class="lang">हिंदी</a>
+</span>
       </nav>
     </div>
   </header>
