--- a/contact.html
+++ b/contact.html
@@ -155,6 +155,10 @@
       <a href="join.html">Join</a>
       <a href="candidates.html">Candidates</a>
       <a href="contact.html" class="active">Contact</a>
+      <span class="lang-switch">
+  <a href="contact.html" class="lang active">EN</a> |
+  <a href="contact-hi.html" class="lang">हिंदी</a>
+</span>
     </nav>
   </div>
 </header>
